--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://maciekryb.github.io/SPA-Project2/",
+  "homepage": "https://maciekryb.github.io/SPA-Project2v2/",
   "name": "projekt2",
   "version": "0.1.0",
   "private": true,
